@@ -39,6 +39,10 @@
 #ifndef __COMMON_API_HPP__
 #define __COMMON_API_HPP__
 
+#if defined (OALAUDIO)
+typedef struct msg_t msg_t;
+#endif
+
 enum sysEventType_t {
     // bk001129 - make sure SE_NONE is zero
     SYSE_NONE = 0,              // evTime is still valid
@@ -102,6 +106,9 @@ public:
     virtual void RandomBytes(uchar8 *string, sint len) = 0;
     virtual void RgbToHsl(vec4_t rgb, vec4_t hsl) = 0;
     virtual void HlsToRgb(vec4_t hsl, vec4_t rgb) = 0;
+#if !defined (RENDERSYSTEM) || !defined (OALAUDIO)
+    virtual void RunAndTimeServerPacket(netadr_t *evFrom, msg_t *buf) = 0;
+#endif
 };
 
 extern idCommon *common;
